fixing overflow-x with clip

--- a/src/static/css/commonstyle.css
+++ b/src/static/css/commonstyle.css
@@ -117,6 +117,7 @@ html, body {
 body {
   margin: 0;
   background-color: var(--bg-mid);
+  overflow-x: clip;
   /* overscroll-behavior-y: none;
   overscroll-behavior-block: none;
   -webkit-overflow-scrolling: touch; */
